--- a/MountainCar/MountainCar_DQN.ipynb
+++ b/MountainCar/MountainCar_DQN.ipynb
@@ -567,7 +567,7 @@
         "###############\n",
         "env.close()\n",
         "\n",
-        "file_name = f\"{args.environment}_DQN_{num_episodes}_episodes.png\"\n",
+        "file_name = f\"{args.environment}_DQN_{num_episodes}_episodes_{args.batch}batch.png\"\n",
         "\n",
         "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 5))\n",
         "\n",
