--- a/CartPole/CartPole_PG.ipynb
+++ b/CartPole/CartPole_PG.ipynb
@@ -955,57 +955,57 @@
         }
       ],
       "source": [
-        "# %%writefile CartPole-PG-c.py\n",
-        "# import subprocess\n",
-        "# import matplotlib.pyplot as plt\n",
-        "# import numpy as np\n",
+        "%%writefile CartPole-PG-c.py\n",
+        "import subprocess\n",
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
         "\n",
-        "# # Fixed settings\n",
-        "# environment = \"CartPole-v1\"\n",
-        "# iterations = 5\n",
-        "# learning_rate = 0.01\n",
-        "# gamma = 0.99\n",
+        "# Fixed settings\n",
+        "environment = \"CartPole-v1\"\n",
+        "iterations = 5\n",
+        "learning_rate = 0.01\n",
+        "gamma = 0.99\n",
         "\n",
-        "# # Batch sizes to compare\n",
-        "# batch_sizes = [8, 16, 32, 64]\n",
+        "# Batch sizes to compare\n",
+        "batch_sizes = [8, 16, 32, 64]\n",
         "\n",
-        "# # Store results\n",
-        "# batch_rewards = {}\n",
+        "# Store results\n",
+        "batch_rewards = {}\n",
         "\n",
-        "# for b in batch_sizes:\n",
-        "#     print(f\"\\nRunning with batch size = {b}\")\n",
-        "#     result = subprocess.run(\n",
-        "#         [\n",
-        "#             \"python3\",\n",
-        "#             \"CartPole-PG-b.py\",\n",
-        "#             \"--environment\", environment,\n",
-        "#             \"--iterations\", str(iterations),\n",
-        "#             \"--batch\", str(b),\n",
-        "#             \"--learning_rate\", str(learning_rate),\n",
-        "#             \"--gamma\", str(gamma),\n",
-        "#             \"--reward_to_go\",\n",
-        "#             \"--advantage_norm\"\n",
-        "#         ],\n",
-        "#         capture_output=True, text=True\n",
-        "#     )\n",
+        "for b in batch_sizes:\n",
+        "    print(f\"\\nRunning with batch size = {b}\")\n",
+        "    result = subprocess.run(\n",
+        "        [\n",
+        "            \"python3\",\n",
+        "            \"CartPole-PG-b.py\",\n",
+        "            \"--environment\", environment,\n",
+        "            \"--iterations\", str(iterations),\n",
+        "            \"--batch\", str(b),\n",
+        "            \"--learning_rate\", str(learning_rate),\n",
+        "            \"--gamma\", str(gamma),\n",
+        "            \"--reward_to_go\",\n",
+        "            \"--advantage_norm\"\n",
+        "        ],\n",
+        "        capture_output=True, text=True\n",
+        "    )\n",
         "\n",
-        "#     # Suppose your training script prints \"Mean rewards per iteration: [...]\"\n",
-        "#     # Extract and parse that list (you can modify question3b.py to save or print it)\n",
-        "#     rewards = eval(result.stdout.split(\"Mean rewards per iteration: \")[-1])\n",
-        "#     batch_rewards[b] = rewards\n",
+        "    # Suppose your training script prints \"Mean rewards per iteration: [...]\"\n",
+        "    # Extract and parse that list (you can modify question3b.py to save or print it)\n",
+        "    rewards = eval(result.stdout.split(\"Mean rewards per iteration: \")[-1])\n",
+        "    batch_rewards[b] = rewards\n",
         "\n",
-        "# # Plot comparison\n",
-        "# plt.figure(figsize=(10, 6))\n",
-        "# for b, rewards in batch_rewards.items():\n",
-        "#     plt.plot(rewards, label=f'Batch Size = {b}')\n",
+        "# Plot comparison\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "for b, rewards in batch_rewards.items():\n",
+        "    plt.plot(rewards, label=f'Batch Size = {b}')\n",
         "\n",
-        "# plt.title(f'Impact of Batch Size on Policy Gradient ({environment})')\n",
-        "# plt.xlabel('Iteration')\n",
-        "# plt.ylabel('Average Return')\n",
-        "# plt.legend()\n",
-        "# plt.grid()\n",
-        "# # plt.savefig(f'{environment}_batch_comparison.png')\n",
-        "# plt.show()\n"
+        "plt.title(f'Impact of Batch Size on Policy Gradient ({environment})')\n",
+        "plt.xlabel('Iteration')\n",
+        "plt.ylabel('Average Return')\n",
+        "plt.legend()\n",
+        "plt.grid()\n",
+        "# plt.savefig(f'{environment}_batch_comparison.png')\n",
+        "plt.show()\n"
       ]
     },
     {
