--- a/MountainCar/MountainCar_DQN.ipynb
+++ b/MountainCar/MountainCar_DQN.ipynb
@@ -734,6 +734,61 @@
       "source": [
         "# !python3 MountainCar-DQN-b.py --environment=\"MountainCar-v0\" --num_episodes=100 --batch=8 --gamma=0.9 --learning_rate=1e-4 --mean_n=5\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%%writefile MountainCar-DQN-c.py\n",
+        "import subprocess\n",
+        "import matplotlib.pyplot as plt\n",
+        "import math\n",
+        "import random\n",
+        "from itertools import count\n",
+        "from collections import namedtuple, deque\n",
+        "import numpy as np\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "import torch.nn.functional as F\n",
+        "import gymnasium as gym\n",
+        "import matplotlib.pyplot as plt\n",
+        "import matplotlib.patches as mpatches\n",
+        "import argparse\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Fixed settings\n",
+        "environment = \"MountainCar-v0\"\n",
+        "num_episodes = 100\n",
+        "\n",
+        "learning_rate = 1e-4\n",
+        "gamma = 0.9\n",
+        "mean_n = 5\n",
+        "\n",
+        "# Batch sizes to compare\n",
+        "batch_sizes = [8, 16, 32, 64]\n",
+        "\n",
+        "# Store results\n",
+        "batch_rewards = {}\n",
+        "\n",
+        "for b in batch_sizes:\n",
+        "    print(f\"\\nRunning with batch size = {b}\")\n",
+        "    result = subprocess.run(\n",
+        "        [\n",
+        "            \"python3\",\n",
+        "            \"MountainCar-DQN-b.py\",\n",
+        "            \"--environment\", environment,\n",
+        "            \"--num_episodes\", str(num_episodes),\n",
+        "            \"--batch\", str(b),\n",
+        "            \"--learning_rate\", str(learning_rate),\n",
+        "            \"--gamma\", str(gamma),\n",
+        "            \"--mean_n\", str(mean_n)\n",
+        "        ],\n",
+        "        capture_output=True, text=True\n",
+        "    )\n"
+      ]
     }
   ],
   "metadata": {
