--- a/CartPole/CartPole_PG.ipynb
+++ b/CartPole/CartPole_PG.ipynb
@@ -956,200 +956,63 @@
       ],
       "source": [
         "%%writefile CartPole-PG-c.py\n",
+        "\n",
         "import subprocess\n",
         "import matplotlib.pyplot as plt\n",
+        "import argparse, os, time, random\n",
+        "import gymnasium as gym\n",
         "import numpy as np\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "from torch.distributions import Categorical\n",
+        "import matplotlib.pyplot as plt\n",
+        "import sys\n",
         "\n",
         "# Fixed settings\n",
         "environment = \"CartPole-v1\"\n",
-        "iterations = 5\n",
-        "learning_rate = 0.01\n",
+        "iterations = 100\n",
+        "learning_rate = 1e-3\n",
         "gamma = 0.99\n",
         "\n",
         "# Batch sizes to compare\n",
-        "batch_sizes = [8, 16, 32, 64]\n",
+        "batch_sizes = [32, 320, 800, 1000, 10000]\n",
         "\n",
         "# Store results\n",
         "batch_rewards = {}\n",
         "\n",
-        "for b in batch_sizes:\n",
-        "    print(f\"\\nRunning with batch size = {b}\")\n",
-        "    result = subprocess.run(\n",
-        "        [\n",
-        "            \"python3\",\n",
-        "            \"CartPole-PG-b.py\",\n",
-        "            \"--environment\", environment,\n",
-        "            \"--iterations\", str(iterations),\n",
-        "            \"--batch\", str(b),\n",
-        "            \"--learning_rate\", str(learning_rate),\n",
-        "            \"--gamma\", str(gamma),\n",
-        "            \"--reward_to_go\",\n",
-        "            \"--advantage_norm\"\n",
-        "        ],\n",
-        "        capture_output=True, text=True\n",
-        "    )\n",
-        "\n",
-        "    # Suppose your training script prints \"Mean rewards per iteration: [...]\"\n",
-        "    # Extract and parse that list (you can modify question3b.py to save or print it)\n",
-        "    rewards = eval(result.stdout.split(\"Mean rewards per iteration: \")[-1])\n",
-        "    batch_rewards[b] = rewards\n",
-        "\n",
-        "# Plot comparison\n",
-        "plt.figure(figsize=(10, 6))\n",
-        "for b, rewards in batch_rewards.items():\n",
-        "    plt.plot(rewards, label=f'Batch Size = {b}')\n",
-        "\n",
-        "plt.title(f'Impact of Batch Size on Policy Gradient ({environment})')\n",
-        "plt.xlabel('Iteration')\n",
-        "plt.ylabel('Average Return')\n",
-        "plt.legend()\n",
-        "plt.grid()\n",
-        "# plt.savefig(f'{environment}_batch_comparison.png')\n",
-        "plt.show()\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 446
-        },
-        "id": "o6TY4IjB2fHk",
-        "outputId": "e5a0494e-9718-4ebe-bc33-28ecec4fde83"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "🚀 Running with batch size = 8\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/jupyter_client/session.py:203: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
-            "  return datetime.utcnow().replace(tzinfo=utc)\n"
-          ]
-        },
-        {
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-2666544246.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     67\u001b[0m         \u001b[0mcmd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"--advantage_norm\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 69\u001b[0;31m     \u001b[0mprocess\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msubprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcmd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcapture_output\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     70\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m     \u001b[0mrewards\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mextract_rewards\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/lib/python3.12/subprocess.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(input, capture_output, timeout, check, *popenargs, **kwargs)\u001b[0m\n\u001b[1;32m    548\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mPopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mpopenargs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mprocess\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    549\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 550\u001b[0;31m             \u001b[0mstdout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstderr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommunicate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    551\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mTimeoutExpired\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mexc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    552\u001b[0m             \u001b[0mprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkill\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/lib/python3.12/subprocess.py\u001b[0m in \u001b[0;36mcommunicate\u001b[0;34m(self, input, timeout)\u001b[0m\n\u001b[1;32m   1207\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1208\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1209\u001b[0;31m                 \u001b[0mstdout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstderr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_communicate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mendtime\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1210\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1211\u001b[0m                 \u001b[0;31m# https://bugs.python.org/issue25942\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/lib/python3.12/subprocess.py\u001b[0m in \u001b[0;36m_communicate\u001b[0;34m(self, input, endtime, orig_timeout)\u001b[0m\n\u001b[1;32m   2113\u001b[0m                             'failed to raise TimeoutExpired.')\n\u001b[1;32m   2114\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2115\u001b[0;31m                     \u001b[0mready\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mselector\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2116\u001b[0m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_check_timeout\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mendtime\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morig_timeout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstdout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstderr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2117\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/lib/python3.12/selectors.py\u001b[0m in \u001b[0;36mselect\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    413\u001b[0m         \u001b[0mready\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    414\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 415\u001b[0;31m             \u001b[0mfd_event_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_selector\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpoll\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    416\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mInterruptedError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    417\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mready\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ],
-      "source": [
-        "# question3c.py\n",
-        "\"\"\"\n",
-        "Part (c): Study and report the impact of batch size on the policy gradient estimates\n",
-        "--------------------------------------------------------------------\n",
-        "This script reuses the Policy Gradient implementation from part (b)\n",
-        "and runs it for multiple batch sizes to compare learning behavior.\n",
-        "--------------------------------------------------------------------\n",
-        "\"\"\"\n",
-        "\n",
-        "import subprocess\n",
-        "import re\n",
-        "import matplotlib.pyplot as plt\n",
-        "import numpy as np\n",
-        "\n",
-        "# ======================\n",
-        "# Hyperparameters\n",
-        "# ======================\n",
-        "ENV_NAME = \"CartPole-v1\"        # You can switch to \"LunarLander-v2\"\n",
-        "ITERATIONS = 50\n",
-        "LEARNING_RATE = 0.01\n",
-        "GAMMA = 0.99\n",
-        "BATCH_SIZES = [8, 16, 32, 64]   # Batch sizes to compare\n",
-        "REWARD_TO_GO = True\n",
-        "ADVANTAGE_NORM = True\n",
-        "\n",
-        "# ======================\n",
-        "# Function to extract rewards\n",
-        "# ======================\n",
-        "def extract_rewards(output_text):\n",
-        "    \"\"\"\n",
-        "    Extracts the average returns per iteration from the output of question3b.py.\n",
-        "    It looks for lines like 'Iter X/Y | AvgReturn Z.ZZZ | Loss W.WWW'\n",
-        "    \"\"\"\n",
-        "    rewards = []\n",
-        "    # Regex to find lines with iteration number, average return, and loss\n",
-        "    # It specifically captures the floating-point number after \"AvgReturn\"\n",
-        "    pattern = re.compile(r\"Iter \\d+/\\d+ \\| AvgReturn (-?\\d+\\.\\d+) \\| Loss (-?\\d+\\.\\d+)\")\n",
-        "    for line in output_text.splitlines():\n",
-        "        match = pattern.search(line)\n",
-        "        if match:\n",
-        "            avg_return = float(match.group(1))\n",
-        "            rewards.append(avg_return)\n",
-        "    if not rewards:\n",
-        "        print(\"⚠️ Could not extract rewards. Check the script output format.\")\n",
-        "    return rewards\n",
-        "\n",
-        "\n",
-        "# ======================\n",
-        "# Run experiments for each batch size\n",
-        "# ======================\n",
-        "results = {}\n",
-        "\n",
-        "for batch in BATCH_SIZES:\n",
-        "    print(f\"\\n🚀 Running with batch size = {batch}\")\n",
-        "    cmd = [\n",
-        "        \"python3\", \"CartPole-PG-b.py\",\n",
-        "        \"--environment\", ENV_NAME,\n",
-        "        \"--iterations\", str(ITERATIONS),\n",
-        "        \"--batch\", str(batch),\n",
-        "        \"--learning_rate\", str(LEARNING_RATE),\n",
-        "        \"--gamma\", str(GAMMA),\n",
-        "    ]\n",
-        "\n",
-        "    if REWARD_TO_GO:\n",
-        "        cmd.append(\"--reward_to_go\")\n",
-        "    if ADVANTAGE_NORM:\n",
-        "        cmd.append(\"--advantage_norm\")\n",
-        "\n",
-        "    process = subprocess.run(cmd, capture_output=True, text=True)\n",
-        "\n",
-        "    rewards = extract_rewards(process.stdout)\n",
-        "    if rewards:\n",
-        "        results[batch] = rewards\n",
-        "        print(f\"✅ Finished batch size {batch}, final average return = {rewards[-1]:.2f}\")\n",
-        "    else:\n",
-        "        print(f\"⚠️ Warning: No rewards extracted for batch size {batch}\")\n",
-        "\n",
-        "\n",
-        "# ======================\n",
-        "# Plot all results\n",
-        "# ======================\n",
-        "plt.figure(figsize=(10, 6), dpi=120)\n",
-        "for batch, rewards in results.items():\n",
-        "    plt.plot(rewards, label=f\"Batch = {batch}\")\n",
-        "\n",
-        "plt.title(f\"Impact of Batch Size on Policy Gradient ({ENV_NAME})\")\n",
-        "plt.xlabel(\"Iterations\")\n",
-        "plt.ylabel(\"Average Return\")\n",
-        "plt.grid(True)\n",
-        "plt.legend()\n",
-        "plt.tight_layout()\n",
-        "\n",
-        "output_file = f\"{ENV_NAME}_batchsize_comparison.png\"\n",
-        "plt.savefig(output_file)\n",
-        "plt.show()\n",
-        "\n",
-        "print(f\"\\n📊 Comparison plot saved as: {output_file}\")\n"
+        "for b in batch_sizes[0:2]:\n",
+        "    script_path = os.path.join(os.path.dirname(__file__), \"CartPole-PG-b.py\")\n",
+        "    try:\n",
+        "        result = subprocess.run(\n",
+        "            [\n",
+        "                sys.executable,\n",
+        "                script_path,\n",
+        "                \"--environment\", environment,\n",
+        "                \"--iterations\", str(iterations),\n",
+        "                \"--batch_size\", str(b),\n",
+        "                \"--lr\", str(learning_rate),\n",
+        "                \"--gamma\", str(gamma),\n",
+        "                \"--reward_to_go\",\n",
+        "                \"--advantage_norm\"\n",
+        "            ],\n",
+        "            capture_output=True,\n",
+        "            text=True,\n",
+        "            check=True,\n",
+        "            cwd=os.path.dirname(__file__)\n",
+        "        )\n",
+        "        # show subprocess output for debugging / parsing\n",
+        "        if result.stdout:\n",
+        "            print(result.stdout)\n",
+        "        if result.stderr:\n",
+        "            print(\"Subprocess stderr:\", result.stderr)\n",
+        "    except subprocess.CalledProcessError as e:\n",
+        "        print(\"Subprocess failed with returncode\", e.returncode)\n",
+        "        if e.stdout:\n",
+        "            print(e.stdout)\n",
+        "        if e.stderr:\n",
+        "            print(e.stderr)\n",
+        "        continue\n"
       ]
     },
     {
