--- a/CartPole/CartPole_PG.ipynb
+++ b/CartPole/CartPole_PG.ipynb
@@ -681,7 +681,7 @@
         }
       ],
       "source": [
-        "%%writefile CartPole-PG-b.py\n",
+        "%%writefile CartPole-PG-b.copy\n",
         "import argparse, os, time, random\n",
         "import gymnasium as gym\n",
         "import numpy as np\n",
@@ -747,8 +747,27 @@
         "    print(f\"\\nTraining {env_name} | γ={gamma} | lr={lr} | batch={batch_size} | device={device}\")\n",
         "\n",
         "    all_returns = []\n",
+        "    best_return = float('-inf')\n",
+        "    best_policy_state = None\n",
         "\n",
         "    for it in range(iterations):\n",
+        "        # Evaluate current best policy\n",
+        "        with torch.no_grad():\n",
+        "            eval_obs = get_obs(env.reset())\n",
+        "            eval_rewards = []\n",
+        "            eval_done = False\n",
+        "            while not eval_done:\n",
+        "                eval_obs_tensor = torch.tensor(eval_obs, dtype=torch.float32, device=device).unsqueeze(0)\n",
+        "                eval_probs = policy(eval_obs_tensor)\n",
+        "                # Use best action (no sampling)\n",
+        "                eval_action = torch.argmax(eval_probs)\n",
+        "                eval_next_obs, eval_reward, eval_done, _ = step_env(env, eval_action.item())\n",
+        "                eval_rewards.append(eval_reward)\n",
+        "                eval_obs = get_obs(eval_next_obs)\n",
+        "            eval_return = sum(eval_rewards)\n",
+        "            print(f\"Iter {it+1:4d}/{iterations} | Best Policy Return: {eval_return:8.2f}\")\n",
+        "\n",
+        "        # Collect training data with exploration\n",
         "        batch_obs, batch_acts, batch_weights = [], [], []\n",
         "        ep_returns = []\n",
         "        log_probs = []\n",
@@ -764,6 +783,7 @@
         "                probs = policy(obs_tensor)\n",
         "                dist = Categorical(probs)\n",
         "                action = dist.sample()\n",
+        "\n",
         "\n",
         "                next_obs, reward, done, _ = step_env(env, action.item())\n",
         "                if reward_scale != 1.0:\n",
@@ -798,13 +818,16 @@
         "        log_probs_tensor = torch.stack(log_probs).to(device)\n",
         "        advantages = torch.tensor(batch_weights, dtype=torch.float32, device=device)\n",
         "\n",
+        "        # Ensure dimensions match\n",
+        "        advantages = advantages.reshape(-1)  # Flatten to 1D\n",
+        "        log_probs_tensor = log_probs_tensor.reshape(-1)  # Flatten to 1D\n",
+        "\n",
         "        # Baseline + normalization\n",
         "        if advantage_norm:\n",
-        "            advantages -= advantages.mean()\n",
-        "            advantages /= (advantages.std(unbiased=False) + 1e-8)\n",
+        "            advantages = (advantages - advantages.mean()) / (advantages.std() + 1e-8)\n",
         "\n",
-        "        # Policy gradient loss\n",
-        "        loss = (-(log_probs_tensor * advantages)).mean()\n",
+        "\n",
+        "        loss = -(log_probs_tensor * advantages).mean()\n",
         "\n",
         "        optimizer.zero_grad()\n",
         "        loss.backward()\n",
@@ -817,17 +840,44 @@
         "\n",
         "        print(f\"Iter {it+1:4d}/{iterations} | AvgReturn: {avg_return:8.2f} | Loss: {loss:.4f}\")\n",
         "\n",
+        "        # Evaluate current policy\n",
+        "        with torch.no_grad():\n",
+        "            eval_obs = get_obs(env.reset())\n",
+        "            eval_rewards = []\n",
+        "            eval_done = False\n",
+        "            while not eval_done:\n",
+        "                eval_obs_tensor = torch.tensor(eval_obs, dtype=torch.float32, device=device).unsqueeze(0)\n",
+        "                eval_probs = policy(eval_obs_tensor)\n",
+        "                eval_action = torch.argmax(eval_probs)\n",
+        "                eval_next_obs, eval_reward, eval_done, _ = step_env(env, eval_action.item())\n",
+        "                eval_rewards.append(eval_reward)\n",
+        "                eval_obs = get_obs(eval_next_obs)\n",
+        "            current_eval_return = sum(eval_rewards)\n",
+        "\n",
+        "            # Update best policy if current one is better\n",
+        "            if current_eval_return > best_return:\n",
+        "                best_return = current_eval_return\n",
+        "                best_policy_state = policy.state_dict().copy()\n",
+        "                print(f\"New best policy found. Return: {best_return:8.2f}\")\n",
+        "            else:\n",
+        "                # Load best policy for next iteration\n",
+        "                policy.load_state_dict(best_policy_state)\n",
+        "                print(f\"Reverting to best policy (Return: {best_return:8.2f})\")\n",
+        "\n",
         "    env.close()\n",
+        "   \n",
+        "    k = 10\n",
+        "    running_avg = np.convolve(all_returns, np.ones(k)/k, mode='valid')\n",
         "    plt.figure(figsize=(8, 4))\n",
-        "    plt.plot(all_returns)\n",
-        "    plt.title(f\"{env_name} - Policy Gradient (Stable Fast Version)\")\n",
+        "    plt.plot(all_returns, label=\"All Returns\", alpha=0.5)\n",
+        "    plt.plot(np.arange(k-1, len(all_returns)), running_avg, label=f\"Running Average (k={k})\", color='r', linewidth=2)\n",
+        "    plt.title(f\"{fname}\")\n",
         "    plt.xlabel(\"Iteration\")\n",
         "    plt.ylabel(\"Average Return\")\n",
-        "    # plt.yscale('log')\n",
         "    plt.grid(True)\n",
+        "    plt.legend()\n",
         "    plt.tight_layout()\n",
-        "    \n",
-        "    plt.savefig(fname)\n",
+        "    plt.savefig(fname + \".png\")\n",
         "    print(f\"Plot saved as {fname}\\n\")\n",
         "    return all_returns\n",
         "\n",
@@ -853,7 +903,7 @@
         "        clip_tuple = (lo, hi)\n",
         "\n",
         "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "    fname = f\"{args.environment}_PG_iters{args.iterations}_bs{args.batch_size}_g_lr_{'rtg' if args.reward_to_go else 'tot'}_{'advnorm' if args.advantage_norm else 'noadv'}_.png\"\n",
+        "    fname = f\"{args.environment}_PG_iters{args.iterations}_bs{args.batch_size}_g_lr_{'rtg' if args.reward_to_go else 'tot'}_{'advnorm' if args.advantage_norm else 'noadv'}_\"\n",
         "    run_training(\n",
         "        env_name=args.environment,\n",
         "        iterations=args.iterations,\n",
@@ -971,17 +1021,17 @@
         "\n",
         "# Fixed settings\n",
         "environment = \"CartPole-v1\"\n",
-        "iterations = 100\n",
+        "iterations = 1000\n",
         "learning_rate = 1e-3\n",
         "gamma = 0.99\n",
         "\n",
         "# Batch sizes to compare\n",
-        "batch_sizes = [32, 320, 800, 1000, 10000]\n",
+        "batch_sizes = [32, 320, 800, 1000]\n",
         "\n",
         "# Store results\n",
         "batch_rewards = {}\n",
         "\n",
-        "for b in batch_sizes[0:2]:\n",
+        "for b in batch_sizes:\n",
         "    script_path = os.path.join(os.path.dirname(__file__), \"CartPole-PG-b.py\")\n",
         "    try:\n",
         "        result = subprocess.run(\n",
