--- a/LunarLander/Lunarlander_PG.ipynb
+++ b/LunarLander/Lunarlander_PG.ipynb
@@ -289,8 +289,27 @@
         "    print(f\"\\nTraining {env_name} | γ={gamma} | lr={lr} | batch={batch_size} | device={device}\")\n",
         "\n",
         "    all_returns = []\n",
+        "    best_return = float('-inf')\n",
+        "    best_policy_state = None\n",
         "\n",
         "    for it in range(iterations):\n",
+        "        # Evaluate current best policy\n",
+        "        with torch.no_grad():\n",
+        "            eval_obs = get_obs(env.reset())\n",
+        "            eval_rewards = []\n",
+        "            eval_done = False\n",
+        "            while not eval_done:\n",
+        "                eval_obs_tensor = torch.tensor(eval_obs, dtype=torch.float32, device=device).unsqueeze(0)\n",
+        "                eval_probs = policy(eval_obs_tensor)\n",
+        "                # Use best action (no sampling)\n",
+        "                eval_action = torch.argmax(eval_probs)\n",
+        "                eval_next_obs, eval_reward, eval_done, _ = step_env(env, eval_action.item())\n",
+        "                eval_rewards.append(eval_reward)\n",
+        "                eval_obs = get_obs(eval_next_obs)\n",
+        "            eval_return = sum(eval_rewards)\n",
+        "            print(f\"Iter {it+1:4d}/{iterations} | Best Policy Return: {eval_return:8.2f}\")\n",
+        "\n",
+        "        # Collect training data with exploration\n",
         "        batch_obs, batch_acts, batch_weights = [], [], []\n",
         "        ep_returns = []\n",
         "        log_probs = []\n",
@@ -306,6 +325,7 @@
         "                probs = policy(obs_tensor)\n",
         "                dist = Categorical(probs)\n",
         "                action = dist.sample()\n",
+        "\n",
         "\n",
         "                next_obs, reward, done, _ = step_env(env, action.item())\n",
         "                if reward_scale != 1.0:\n",
@@ -340,13 +360,16 @@
         "        log_probs_tensor = torch.stack(log_probs).to(device)\n",
         "        advantages = torch.tensor(batch_weights, dtype=torch.float32, device=device)\n",
         "\n",
+        "        # Ensure dimensions match\n",
+        "        advantages = advantages.reshape(-1)  # Flatten to 1D\n",
+        "        log_probs_tensor = log_probs_tensor.reshape(-1)  # Flatten to 1D\n",
+        "\n",
         "        # Baseline + normalization\n",
         "        if advantage_norm:\n",
-        "            advantages -= advantages.mean()\n",
-        "            advantages /= (advantages.std(unbiased=False) + 1e-8)\n",
+        "            advantages = (advantages - advantages.mean()) / (advantages.std() + 1e-8)\n",
         "\n",
-        "        # Policy gradient loss\n",
-        "        loss = (-(log_probs_tensor * advantages)).mean()\n",
+        "\n",
+        "        loss = -(log_probs_tensor * advantages).mean()\n",
         "\n",
         "        optimizer.zero_grad()\n",
         "        loss.backward()\n",
@@ -359,23 +382,50 @@
         "\n",
         "        print(f\"Iter {it+1:4d}/{iterations} | AvgReturn: {avg_return:8.2f} | Loss: {loss:.4f}\")\n",
         "\n",
+        "        # Evaluate current policy\n",
+        "        with torch.no_grad():\n",
+        "            eval_obs = get_obs(env.reset())\n",
+        "            eval_rewards = []\n",
+        "            eval_done = False\n",
+        "            while not eval_done:\n",
+        "                eval_obs_tensor = torch.tensor(eval_obs, dtype=torch.float32, device=device).unsqueeze(0)\n",
+        "                eval_probs = policy(eval_obs_tensor)\n",
+        "                eval_action = torch.argmax(eval_probs)\n",
+        "                eval_next_obs, eval_reward, eval_done, _ = step_env(env, eval_action.item())\n",
+        "                eval_rewards.append(eval_reward)\n",
+        "                eval_obs = get_obs(eval_next_obs)\n",
+        "            current_eval_return = sum(eval_rewards)\n",
+        "\n",
+        "            # Update best policy if current one is better\n",
+        "            if current_eval_return > best_return:\n",
+        "                best_return = current_eval_return\n",
+        "                best_policy_state = policy.state_dict().copy()\n",
+        "                print(f\"New best policy found. Return: {best_return:8.2f}\")\n",
+        "            else:\n",
+        "                # Load best policy for next iteration\n",
+        "                policy.load_state_dict(best_policy_state)\n",
+        "                print(f\"Reverting to best policy (Return: {best_return:8.2f})\")\n",
+        "\n",
         "    env.close()\n",
+        "   \n",
+        "    k = 100\n",
+        "    running_avg = np.convolve(all_returns, np.ones(k)/k, mode='valid')\n",
         "    plt.figure(figsize=(8, 4))\n",
-        "    plt.plot(all_returns)\n",
+        "    plt.plot(all_returns, label=\"All Returns\", alpha=0.5)\n",
+        "    plt.plot(np.arange(k-1, len(all_returns)), running_avg, label=f\"Running Average (k={k})\", color='r', linewidth=2)\n",
         "    plt.title(f\"{fname}\")\n",
         "    plt.xlabel(\"Iteration\")\n",
         "    plt.ylabel(\"Average Return\")\n",
-        "    # plt.yscale('log')\n",
         "    plt.grid(True)\n",
+        "    plt.legend()\n",
         "    plt.tight_layout()\n",
-        "    \n",
-        "    plt.savefig(fname)\n",
+        "    plt.savefig(fname + \".png\")\n",
         "    print(f\"Plot saved as {fname}\\n\")\n",
         "    return all_returns\n",
         "\n",
         "if __name__ == \"__main__\":\n",
         "    parser = argparse.ArgumentParser()\n",
-        "    parser.add_argument(\"--environment\", type=str, default=\"CartPole-v1\")\n",
+        "    parser.add_argument(\"--environment\", type=str, default=\"LunarLander-v3\")\n",
         "    parser.add_argument(\"--iterations\", type=int, default=300)\n",
         "    parser.add_argument(\"--batch_size\", type=int, default=8000)\n",
         "    parser.add_argument(\"--lr\", type=float, default=1e-3)\n",
@@ -395,7 +445,7 @@
         "        clip_tuple = (lo, hi)\n",
         "\n",
         "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "    fname = f\"{args.environment}_PG_iters{args.iterations}_bs{args.batch_size}_g_lr_{'rtg' if args.reward_to_go else 'tot'}_{'advnorm' if args.advantage_norm else 'noadv'}_.png\"\n",
+        "    fname = f\"{args.environment}_PG_iters{args.iterations}_bs{args.batch_size}_g_lr_{'rtg' if args.reward_to_go else 'tot'}_{'advnorm' if args.advantage_norm else 'noadv'}_\"\n",
         "    run_training(\n",
         "        env_name=args.environment,\n",
         "        iterations=args.iterations,\n",
@@ -446,6 +496,73 @@
       ],
       "source": [
         "# !python3 LunarLander-PG-b.py --environment LunarLander-v3 --iterations 5 --batch 40 --gamma 0.99 --learning_rate 5e-4 --reward_to_go --advantage_norm --reward_scale 1.0\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%%writefile LunarLander-PG-c.py\n",
+        "\n",
+        "import subprocess\n",
+        "import matplotlib.pyplot as plt\n",
+        "import argparse, os, time, random\n",
+        "import gymnasium as gym\n",
+        "import numpy as np\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "from torch.distributions import Categorical\n",
+        "import matplotlib.pyplot as plt\n",
+        "import sys\n",
+        "\n",
+        "# Fixed settings\n",
+        "environment = \"CartPole-v1\"\n",
+        "iterations = 2000\n",
+        "learning_rate = 1e-3\n",
+        "gamma = 0.99\n",
+        "\n",
+        "# Batch sizes to compare\n",
+        "batch_sizes = [40, 400, 4000]\n",
+        "\n",
+        "# Store results\n",
+        "batch_rewards = {}\n",
+        "\n",
+        "for b in batch_sizes:\n",
+        "    script_path = os.path.join(os.path.dirname(__file__), \"LunarLander-PG-b.py\")\n",
+        "    try:\n",
+        "        result = subprocess.run(\n",
+        "            [\n",
+        "                sys.executable,\n",
+        "                script_path,\n",
+        "                \"--environment\", environment,\n",
+        "                \"--iterations\", str(iterations),\n",
+        "                \"--batch_size\", str(b),\n",
+        "                \"--lr\", str(learning_rate),\n",
+        "                \"--gamma\", str(gamma),\n",
+        "                \"--reward_to_go\",\n",
+        "                \"--advantage_norm\"\n",
+        "            ],\n",
+        "            capture_output=True,\n",
+        "            text=True,\n",
+        "            check=True,\n",
+        "            cwd=os.path.dirname(__file__)\n",
+        "        )\n",
+        "        # show subprocess output for debugging / parsing\n",
+        "        if result.stdout:\n",
+        "            print(result.stdout)\n",
+        "        if result.stderr:\n",
+        "            print(\"Subprocess stderr:\", result.stderr)\n",
+        "    except subprocess.CalledProcessError as e:\n",
+        "        print(\"Subprocess failed with returncode\", e.returncode)\n",
+        "        if e.stdout:\n",
+        "            print(e.stdout)\n",
+        "        if e.stderr:\n",
+        "            print(e.stderr)\n",
+        "        continue\n",
+        "\n"
       ]
     }
   ],
