--- a/LunarLander/Lunarlander_PG.ipynb
+++ b/LunarLander/Lunarlander_PG.ipynb
@@ -200,7 +200,8 @@
         }
       ],
       "source": [
-        "# !python3 LunarLander-PG-a.py --environment LunarLander-v3 --iterations 50 --batch 16\n"
+        "# !python3 LunarLander-PG-a.py --environment LunarLander-v3 --iterations 50 --batch 16\n",
+        "# run the python CMD via CLI\n"
       ]
     },
     {
@@ -495,7 +496,8 @@
         }
       ],
       "source": [
-        "# !python3 LunarLander-PG-b.py --environment LunarLander-v3 --iterations 5 --batch 40 --gamma 0.99 --learning_rate 5e-4 --reward_to_go --advantage_norm --reward_scale 1.0\n"
+        "# !python3 LunarLander-PG-b.py --environment LunarLander-v3 --iterations 5 --batch 40 --gamma 0.99 --learning_rate 5e-4 --reward_to_go --advantage_norm --reward_scale 1.0\n",
+        "# run the python CMD via CLI\n"
       ]
     },
     {
@@ -519,7 +521,7 @@
         "import sys\n",
         "\n",
         "# Fixed settings\n",
-        "environment = \"CartPole-v1\"\n",
+        "environment = \"LunarLander-v3\"\n",
         "iterations = 2000\n",
         "learning_rate = 1e-3\n",
         "gamma = 0.99\n",
@@ -563,6 +565,15 @@
         "            print(e.stderr)\n",
         "        continue\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# run the python CMD via CLI\n"
       ]
     }
   ],
