--- a/MountainCar/MountainCar_DQN.ipynb
+++ b/MountainCar/MountainCar_DQN.ipynb
@@ -732,7 +732,8 @@
         }
       ],
       "source": [
-        "# !python3 MountainCar-DQN-b.py --environment=\"MountainCar-v0\" --num_episodes=100 --batch=8 --gamma=0.9 --learning_rate=1e-4 --mean_n=5\n"
+        "# !python3 MountainCar-DQN-b.py --environment=\"MountainCar-v0\" --num_episodes=100 --batch=8 --gamma=0.9 --learning_rate=1e-4 --mean_n=5\n",
+        "# run the python CMD via CLI\n"
       ]
     },
     {
@@ -788,6 +789,15 @@
         "        ],\n",
         "        capture_output=True, text=True\n",
         "    )\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# run the python CMD via CLI\n"
       ]
     }
   ],
