--- a/CartPole/CartPole_PG.ipynb
+++ b/CartPole/CartPole_PG.ipynb
@@ -658,7 +658,8 @@
         }
       ],
       "source": [
-        "# !python3 CartPole-PG-a.py --environment CartPole-v1 --iterations 500 --batch 16\n"
+        "# !python3 CartPole-PG-a.py --environment CartPole-v1 --iterations 500 --batch 16\n",
+        "# run the python CMD via CLI\n"
       ]
     },
     {
@@ -961,7 +962,8 @@
         }
       ],
       "source": [
-        "# !python3 CartPole-PG-b.py --environment CartPole-v1 --iterations 50 --batch 32 --gamma 0.99 --learning_rate 1e-3 --reward_to_go --advantage_norm\n"
+        "# !python3 CartPole-PG-b.py --environment CartPole-v1 --iterations 50 --batch 32 --gamma 0.99 --learning_rate 1e-3 --reward_to_go --advantage_norm\n",
+        "# run the python CMD via CLI\n"
       ]
     },
     {
@@ -1068,11 +1070,11 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "Nx26Nc8oNr92"
-      },
+      "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "# run the python CMD via CLI\n"
+      ]
     }
   ],
   "metadata": {
