Pong done,cartpole-c,lunarlander-b+c to be done

--- a/CartPole/CartPole_PG.ipynb
+++ b/CartPole/CartPole_PG.ipynb
@@ -1,15 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "E_7c0ohrHaCU"
-      },
-      "source": [
-        "yet to implement CartPole bro\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -682,196 +673,57 @@
         }
       ],
       "source": [
-        "%%writefile CartPole-PG-b.copy\n",
-        "import argparse, os, time, random\n",
+        "%%writefile CartPole-PG-b.py\n",
+        "import os\n",
         "import gymnasium as gym\n",
-        "import numpy as np\n",
         "import torch\n",
+        "import numpy as np\n",
         "import torch.nn as nn\n",
         "import torch.optim as optim\n",
-        "from torch.distributions import Categorical\n",
         "import matplotlib.pyplot as plt\n",
+        "from datetime import datetime\n",
+        "import argparse\n",
         "\n",
         "\n",
         "class Policy(nn.Module):\n",
-        "    def __init__(self, obs_dim, act_dim, hidden_sizes=(128, 128)):\n",
-        "        super().__init__()\n",
-        "        layers = []\n",
-        "        prev_dim = obs_dim\n",
-        "        for h in hidden_sizes:\n",
-        "            layers += [nn.Linear(prev_dim, h), nn.ReLU()]\n",
-        "            prev_dim = h\n",
-        "        layers += [nn.Linear(prev_dim, act_dim), nn.Softmax(dim=-1)]\n",
-        "        self.net = nn.Sequential(*layers)\n",
+        "    def __init__(self, state_dim, action_dim, hidden_dim=64):\n",
+        "        super(Policy, self).__init__()\n",
+        "        self.network = nn.Sequential(\n",
+        "            nn.Linear(state_dim, hidden_dim),\n",
+        "            nn.Tanh(),\n",
+        "            nn.Linear(hidden_dim, hidden_dim),\n",
+        "            nn.Tanh(),\n",
+        "            nn.Linear(hidden_dim, action_dim)\n",
+        "        )\n",
+        "    \n",
+        "        for layer in self.network:\n",
+        "            if isinstance(layer, nn.Linear):\n",
+        "                nn.init.orthogonal_(layer.weight, gain=np.sqrt(2))\n",
+        "                nn.init.constant_(layer.bias, 0.0)\n",
+        "    \n",
+        "    def forward(self, x):\n",
+        "        return self.network(x)\n",
         "\n",
-        "    def forward(self, obs):\n",
-        "        return self.net(obs)\n",
-        "\n",
-        "\n",
-        "def discount_cumsum(rewards, gamma):\n",
-        "    \"\"\"Compute discounted cumulative rewards.\"\"\"\n",
-        "    discounted = np.zeros_like(rewards, dtype=np.float32)\n",
-        "    running_add = 0\n",
-        "    for t in reversed(range(len(rewards))):\n",
-        "        running_add = rewards[t] + gamma * running_add\n",
-        "        discounted[t] = running_add\n",
-        "    return list(discounted)\n",
-        "\n",
-        "\n",
-        "def get_obs(obs):\n",
-        "    return np.array(obs[0] if isinstance(obs, (tuple, list)) else obs)\n",
-        "\n",
-        "\n",
-        "def step_env(env, action):\n",
-        "    out = env.step(action)\n",
-        "    if len(out) == 5:\n",
-        "        obs, reward, term, trunc, info = out\n",
-        "        done = term or trunc\n",
+        "def compute_returns(rewards, gamma, reward_to_go=False):\n",
+        "    \"\"\"Compute discounted returns.\"\"\"\n",
+        "    if reward_to_go:\n",
+        "        returns = []\n",
+        "        future_return = 0\n",
+        "        for r in reversed(rewards):\n",
+        "            future_return = r + gamma * future_return\n",
+        "            returns.insert(0, future_return)\n",
+        "        return returns\n",
         "    else:\n",
-        "        obs, reward, done, info = out\n",
-        "    return obs, reward, done, info\n",
+        "        total_return = sum([gamma**i * r for i, r in enumerate(rewards)])\n",
+        "        return [total_return] * len(rewards)\n",
         "\n",
-        "\n",
-        "def run_training(env_name, iterations, batch_size, lr, gamma,\n",
-        "                 reward_to_go, advantage_norm, reward_scale,\n",
-        "                 reward_clip, hidden_dim, device, fname):\n",
-        "\n",
-        "\n",
-        "\n",
-        "    env = gym.make(env_name)\n",
-        "    obs_dim = env.observation_space.shape[0]\n",
-        "    act_dim = env.action_space.n\n",
-        "\n",
-        "    policy = Policy(obs_dim, act_dim, hidden_sizes=(hidden_dim, hidden_dim)).to(device)\n",
-        "    optimizer = optim.Adam(policy.parameters(), lr=lr)\n",
-        "\n",
-        "    print(f\"\\nTraining {env_name} | γ={gamma} | lr={lr} | batch={batch_size} | device={device}\")\n",
-        "\n",
-        "    all_returns = []\n",
-        "    best_return = float('-inf')\n",
-        "    best_policy_state = None\n",
-        "\n",
-        "    for it in range(iterations):\n",
-        "        # Evaluate current best policy\n",
-        "        with torch.no_grad():\n",
-        "            eval_obs = get_obs(env.reset())\n",
-        "            eval_rewards = []\n",
-        "            eval_done = False\n",
-        "            while not eval_done:\n",
-        "                eval_obs_tensor = torch.tensor(eval_obs, dtype=torch.float32, device=device).unsqueeze(0)\n",
-        "                eval_probs = policy(eval_obs_tensor)\n",
-        "                # Use best action (no sampling)\n",
-        "                eval_action = torch.argmax(eval_probs)\n",
-        "                eval_next_obs, eval_reward, eval_done, _ = step_env(env, eval_action.item())\n",
-        "                eval_rewards.append(eval_reward)\n",
-        "                eval_obs = get_obs(eval_next_obs)\n",
-        "            eval_return = sum(eval_rewards)\n",
-        "            print(f\"Iter {it+1:4d}/{iterations} | Best Policy Return: {eval_return:8.2f}\")\n",
-        "\n",
-        "        # Collect training data with exploration\n",
-        "        batch_obs, batch_acts, batch_weights = [], [], []\n",
-        "        ep_returns = []\n",
-        "        log_probs = []\n",
-        "\n",
-        "        steps_collected = 0\n",
-        "        while steps_collected < batch_size:\n",
-        "            obs = get_obs(env.reset())\n",
-        "            ep_rewards, ep_logps, ep_obs, ep_acts = [], [], [], []\n",
-        "\n",
-        "            done = False\n",
-        "            while not done:\n",
-        "                obs_tensor = torch.tensor(obs, dtype=torch.float32, device=device).unsqueeze(0)\n",
-        "                probs = policy(obs_tensor)\n",
-        "                dist = Categorical(probs)\n",
-        "                action = dist.sample()\n",
-        "\n",
-        "\n",
-        "                next_obs, reward, done, _ = step_env(env, action.item())\n",
-        "                if reward_scale != 1.0:\n",
-        "                    reward *= reward_scale\n",
-        "                if reward_clip:\n",
-        "                    reward = np.clip(reward, reward_clip[0], reward_clip[1])\n",
-        "\n",
-        "                ep_obs.append(obs)\n",
-        "                ep_acts.append(action.item())\n",
-        "                ep_logps.append(dist.log_prob(action))\n",
-        "                ep_rewards.append(reward)\n",
-        "                obs = get_obs(next_obs)\n",
-        "\n",
-        "            # Compute returns\n",
-        "            if reward_to_go:\n",
-        "                ep_returns = discount_cumsum(ep_rewards, gamma)\n",
-        "            else:\n",
-        "                G = sum([gamma**t * r for t, r in enumerate(ep_rewards)])\n",
-        "                ep_returns = [G for _ in ep_rewards]\n",
-        "\n",
-        "            batch_obs += ep_obs\n",
-        "            batch_acts += ep_acts\n",
-        "            batch_weights += list(ep_returns)\n",
-        "            log_probs += ep_logps\n",
-        "            ep_returns_sum = sum(ep_rewards)\n",
-        "            ep_returns.append(ep_returns_sum)\n",
-        "            ep_returns = np.array(ep_returns)\n",
-        "\n",
-        "            steps_collected += len(ep_rewards)\n",
-        "\n",
-        "        # Convert to tensors\n",
-        "        log_probs_tensor = torch.stack(log_probs).to(device)\n",
-        "        advantages = torch.tensor(batch_weights, dtype=torch.float32, device=device)\n",
-        "\n",
-        "        # Ensure dimensions match\n",
-        "        advantages = advantages.reshape(-1)  # Flatten to 1D\n",
-        "        log_probs_tensor = log_probs_tensor.reshape(-1)  # Flatten to 1D\n",
-        "\n",
-        "        # Baseline + normalization\n",
-        "        if advantage_norm:\n",
-        "            advantages = (advantages - advantages.mean()) / (advantages.std() + 1e-8)\n",
-        "\n",
-        "\n",
-        "        loss = -(log_probs_tensor * advantages).mean()\n",
-        "\n",
-        "        optimizer.zero_grad()\n",
-        "        loss.backward()\n",
-        "        torch.nn.utils.clip_grad_norm_(policy.parameters(), 1.0)\n",
-        "        optimizer.step()\n",
-        "\n",
-        "        avg_return = np.mean(ep_returns)\n",
-        "        all_returns.append(avg_return)\n",
-        "\n",
-        "\n",
-        "        print(f\"Iter {it+1:4d}/{iterations} | AvgReturn: {avg_return:8.2f} | Loss: {loss:.4f}\")\n",
-        "\n",
-        "        # Evaluate current policy\n",
-        "        with torch.no_grad():\n",
-        "            eval_obs = get_obs(env.reset())\n",
-        "            eval_rewards = []\n",
-        "            eval_done = False\n",
-        "            while not eval_done:\n",
-        "                eval_obs_tensor = torch.tensor(eval_obs, dtype=torch.float32, device=device).unsqueeze(0)\n",
-        "                eval_probs = policy(eval_obs_tensor)\n",
-        "                eval_action = torch.argmax(eval_probs)\n",
-        "                eval_next_obs, eval_reward, eval_done, _ = step_env(env, eval_action.item())\n",
-        "                eval_rewards.append(eval_reward)\n",
-        "                eval_obs = get_obs(eval_next_obs)\n",
-        "            current_eval_return = sum(eval_rewards)\n",
-        "\n",
-        "            # Update best policy if current one is better\n",
-        "            if current_eval_return > best_return:\n",
-        "                best_return = current_eval_return\n",
-        "                best_policy_state = policy.state_dict().copy()\n",
-        "                print(f\"New best policy found. Return: {best_return:8.2f}\")\n",
-        "            else:\n",
-        "                # Load best policy for next iteration\n",
-        "                policy.load_state_dict(best_policy_state)\n",
-        "                print(f\"Reverting to best policy (Return: {best_return:8.2f})\")\n",
-        "\n",
-        "    env.close()\n",
-        "   \n",
-        "    k = 10\n",
-        "    running_avg = np.convolve(all_returns, np.ones(k)/k, mode='valid')\n",
+        "def plot_rewards(all_mean_rewards, fname):\n",
+        "    \n",
+        "    k = 50\n",
+        "    running_avg = np.convolve(all_mean_rewards, np.ones(k)/k, mode='valid')\n",
         "    plt.figure(figsize=(8, 4))\n",
-        "    plt.plot(all_returns, label=\"All Returns\", alpha=0.5)\n",
-        "    plt.plot(np.arange(k-1, len(all_returns)), running_avg, label=f\"Running Average (k={k})\", color='r', linewidth=2)\n",
+        "    plt.plot(all_mean_rewards, label=\"All Returns\", alpha=0.5)\n",
+        "    plt.plot(np.arange(k-1, len(all_mean_rewards)), running_avg, label=f\"Running Average (k={k})\", color='r', linewidth=2)\n",
         "    plt.title(f\"{fname}\")\n",
         "    plt.xlabel(\"Iteration\")\n",
         "    plt.ylabel(\"Average Return\")\n",
@@ -879,10 +731,83 @@
         "    plt.legend()\n",
         "    plt.tight_layout()\n",
         "    plt.savefig(fname + \".png\")\n",
-        "    print(f\"Plot saved as {fname}\\n\")\n",
-        "    return all_returns\n",
+        "    print(f\"Plot saved as {fname}.png\\n\")\n",
+        "    plt.close()\n",
         "\n",
-        "if __name__ == \"__main__\":\n",
+        "def pg_training(env_name=\"CartPole-v1\", iterations=100, batch_size=2000,lr=1e-2, gamma=0.99, reward_to_go=True, advantage_norm=True,hidden_dim=128,):\n",
+        "    \n",
+        "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "    print(f\"PG training on {env_name} | reward_to_go={reward_to_go} advantage_norm={advantage_norm}  | device = {device}\")\n",
+        "    env = gym.make(env_name)\n",
+        "    state_dim = env.observation_space.shape[0]\n",
+        "    n_actions = env.action_space.n\n",
+        "    \n",
+        "    policy = Policy(state_dim, n_actions, hidden_dim).to(device)\n",
+        "    optimizer = optim.Adam(policy.parameters(), lr=lr)\n",
+        "\n",
+        "    all_mean_rewards = []\n",
+        "\n",
+        "    for it in range(iterations):\n",
+        "        batch_states, batch_actions, batch_weights, batch_episode_rewards = [], [], [], []\n",
+        "        steps = 0\n",
+        "\n",
+        "        # collect trajectories until we reach desired batch size\n",
+        "        while steps < batch_size:\n",
+        "            obs, info = env.reset()\n",
+        "            done = False\n",
+        "            states, actions, rewards = [], [], []\n",
+        "            while True:\n",
+        "                s_t = torch.tensor(obs, dtype=torch.float32, device=device).unsqueeze(0)\n",
+        "                logits = policy(s_t)\n",
+        "                dist = torch.distributions.Categorical(logits=logits)\n",
+        "                action = int(dist.sample().item())\n",
+        "\n",
+        "                next_obs, reward, terminated, truncated, info = env.step(action)\n",
+        "                done_flag = terminated or truncated\n",
+        "\n",
+        "                states.append(obs)\n",
+        "                actions.append(action)\n",
+        "                rewards.append(reward)\n",
+        "                obs = next_obs\n",
+        "\n",
+        "                if done_flag:\n",
+        "                    break\n",
+        "\n",
+        "            steps += len(states)\n",
+        "            batch_states += states\n",
+        "            batch_actions += actions\n",
+        "            batch_episode_rewards.append(sum(rewards))\n",
+        "            batch_weights += list(compute_returns(rewards, gamma, reward_to_go))\n",
+        "\n",
+        "        # prepare tensors\n",
+        "        batch_states_t = torch.tensor(np.array(batch_states), dtype=torch.float32, device=device)\n",
+        "        batch_actions_t = torch.tensor(batch_actions, dtype=torch.int64, device=device)\n",
+        "        batch_weights_t = torch.tensor(batch_weights, dtype=torch.float32, device=device)\n",
+        "\n",
+        "        # advantage normalization\n",
+        "        if advantage_norm:\n",
+        "            mean = batch_weights_t.mean()\n",
+        "            std = batch_weights_t.std() + 1e-8\n",
+        "            batch_weights_t = (batch_weights_t - mean) / std\n",
+        "\n",
+        "        logits = policy(batch_states_t)\n",
+        "        dists = torch.distributions.Categorical(logits=logits)\n",
+        "        logp = dists.log_prob(batch_actions_t)\n",
+        "        loss = -(logp * batch_weights_t).mean()\n",
+        "\n",
+        "        optimizer.zero_grad()\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "\n",
+        "        mean_reward = np.mean(batch_episode_rewards)\n",
+        "        all_mean_rewards.append(mean_reward)\n",
+        "        # mean20 = np.mean(all_mean_rewards[-20:])\n",
+        "        print(f\"Iteration {it+1}/{iterations} | Mean Reward: {mean_reward:.2f} | Episodes: {len(batch_episode_rewards)}\")\n",
+        "\n",
+        "    return all_mean_rewards\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":    \n",
         "    parser = argparse.ArgumentParser()\n",
         "    parser.add_argument(\"--environment\", type=str, default=\"CartPole-v1\")\n",
         "    parser.add_argument(\"--iterations\", type=int, default=300)\n",
@@ -897,15 +822,7 @@
         "    parser.add_argument(\"--hidden_dim\", type=int, default=128)\n",
         "    args = parser.parse_args()\n",
         "\n",
-        "    clip_tuple = None\n",
-        "    if args.reward_clip_min is not None or args.reward_clip_max is not None:\n",
-        "        lo = -np.inf if args.reward_clip_min is None else args.reward_clip_min\n",
-        "        hi = np.inf if args.reward_clip_max is None else args.reward_clip_max\n",
-        "        clip_tuple = (lo, hi)\n",
-        "\n",
-        "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "    fname = f\"{args.environment}_PG_iters{args.iterations}_bs{args.batch_size}_g_lr_{'rtg' if args.reward_to_go else 'tot'}_{'advnorm' if args.advantage_norm else 'noadv'}_\"\n",
-        "    run_training(\n",
+        "    all_mean_rewards = pg_training(\n",
         "        env_name=args.environment,\n",
         "        iterations=args.iterations,\n",
         "        batch_size=args.batch_size,\n",
@@ -913,12 +830,11 @@
         "        gamma=args.gamma,\n",
         "        reward_to_go=args.reward_to_go,\n",
         "        advantage_norm=args.advantage_norm,\n",
-        "        reward_scale=args.reward_scale,\n",
-        "        reward_clip=clip_tuple,\n",
-        "        hidden_dim=args.hidden_dim,\n",
-        "        device=device,\n",
-        "        fname=fname\n",
-        "    )\n"
+        "        hidden_dim=args.hidden_dim\n",
+        "    )\n",
+        "\n",
+        "    fname = f\"{args.environment}_PG_iters{args.iterations}_bs{args.batch_size}_g_lr_{'rtg' if args.reward_to_go else 'tot'}_{'advnorm' if args.advantage_norm else 'noadv'}_\"\n",
+        "    plot_rewards(all_mean_rewards, fname)\n"
       ]
     },
     {
