need to do reports, might do mountain car again

--- a/CartPole/CartPole_PG.ipynb
+++ b/CartPole/CartPole_PG.ipynb
@@ -26,7 +26,6 @@
         "import matplotlib.pyplot as plt\n",
         "import gymnasium as gym\n",
         "import torch\n",
-        "import random\n",
         "import argparse\n",
         "from itertools import count\n",
         "\n",
@@ -674,14 +673,12 @@
       ],
       "source": [
         "%%writefile CartPole-PG-b.py\n",
-        "import os\n",
         "import gymnasium as gym\n",
         "import torch\n",
         "import numpy as np\n",
         "import torch.nn as nn\n",
         "import torch.optim as optim\n",
         "import matplotlib.pyplot as plt\n",
-        "from datetime import datetime\n",
         "import argparse\n",
         "\n",
         "\n",
@@ -734,7 +731,7 @@
         "    print(f\"Plot saved as {fname}.png\\n\")\n",
         "    plt.close()\n",
         "\n",
-        "def pg_training(env_name=\"CartPole-v1\", iterations=100, batch_size=2000,lr=1e-2, gamma=0.99, reward_to_go=True, advantage_norm=True,hidden_dim=128,):\n",
+        "def run_training(env_name=\"CartPole-v1\", iterations=100, batch_size=2000,lr=1e-2, gamma=0.99, reward_to_go=True, advantage_norm=True,hidden_dim=128,):\n",
         "    \n",
         "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "    print(f\"PG training on {env_name} | reward_to_go={reward_to_go} advantage_norm={advantage_norm}  | device = {device}\")\n",
@@ -801,7 +798,6 @@
         "\n",
         "        mean_reward = np.mean(batch_episode_rewards)\n",
         "        all_mean_rewards.append(mean_reward)\n",
-        "        # mean20 = np.mean(all_mean_rewards[-20:])\n",
         "        print(f\"Iteration {it+1}/{iterations} | Mean Reward: {mean_reward:.2f} | Episodes: {len(batch_episode_rewards)}\")\n",
         "\n",
         "    return all_mean_rewards\n",
@@ -822,7 +818,7 @@
         "    parser.add_argument(\"--hidden_dim\", type=int, default=128)\n",
         "    args = parser.parse_args()\n",
         "\n",
-        "    all_mean_rewards = pg_training(\n",
+        "    all_mean_rewards = run_training(\n",
         "        env_name=args.environment,\n",
         "        iterations=args.iterations,\n",
         "        batch_size=args.batch_size,\n",
@@ -926,15 +922,7 @@
         "%%writefile CartPole-PG-c.py\n",
         "\n",
         "import subprocess\n",
-        "import matplotlib.pyplot as plt\n",
-        "import argparse, os, time, random\n",
-        "import gymnasium as gym\n",
-        "import numpy as np\n",
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "import torch.optim as optim\n",
-        "from torch.distributions import Categorical\n",
-        "import matplotlib.pyplot as plt\n",
+        "import os\n",
         "import sys\n",
         "\n",
         "# Fixed settings\n",
