--- a/MountainCar/MountainCar_DQN.ipynb
+++ b/MountainCar/MountainCar_DQN.ipynb
@@ -29,7 +29,6 @@
         "import matplotlib.patches as mpatches\n",
         "import random\n",
         "from itertools import count\n",
-        "import os\n",
         "\n",
         "def parse_args():\n",
         "    p = argparse.ArgumentParser(description=\"Running with different episodic counts and mean rewards\")\n",
@@ -364,7 +363,6 @@
         "import matplotlib.pyplot as plt\n",
         "import matplotlib.patches as mpatches\n",
         "import argparse\n",
-        "import pandas as pd\n",
         "\n",
         "#################################\n",
         "# Argument Parsing\n",
@@ -744,21 +742,8 @@
       "source": [
         "%%writefile MountainCar-DQN-c.py\n",
         "import subprocess\n",
-        "import matplotlib.pyplot as plt\n",
-        "import math\n",
-        "import random\n",
-        "from itertools import count\n",
-        "from collections import namedtuple, deque\n",
-        "import numpy as np\n",
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "import torch.optim as optim\n",
-        "import torch.nn.functional as F\n",
-        "import gymnasium as gym\n",
-        "import matplotlib.pyplot as plt\n",
-        "import matplotlib.patches as mpatches\n",
-        "import argparse\n",
-        "import pandas as pd\n",
+        "import sys\n",
+        "import os\n",
         "\n",
         "# Fixed settings\n",
         "environment = \"MountainCar-v0\"\n",
