coding, results done. report to make

--- a/CartPole/CartPole_PG.ipynb
+++ b/CartPole/CartPole_PG.ipynb
@@ -927,12 +927,12 @@
         "\n",
         "# Fixed settings\n",
         "environment = \"CartPole-v1\"\n",
-        "iterations = 1000\n",
+        "iterations = 500\n",
         "learning_rate = 1e-3\n",
         "gamma = 0.99\n",
         "\n",
         "# Batch sizes to compare\n",
-        "batch_sizes = [32, 320, 800, 1000]\n",
+        "batch_sizes = [50, 500, 5000]\n",
         "\n",
         "# Store results\n",
         "batch_rewards = {}\n",
