--- a/MountainCar/MountainCar_DQN.ipynb
+++ b/MountainCar/MountainCar_DQN.ipynb
@@ -746,6 +746,73 @@
       "source": [
         "# run the python CMD via CLI\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Part(a)\n",
+        "A random agent in the MountainCar-v0 environment performs poorly, consistently receiving rewards around -200 without any improvement over time. Its actions are uniformly random across all states, which is an ineffective strategy for building the momentum required to escape the valley and reach the goal.\n",
+        "\n",
+        "--- \n",
+        "\n",
+        "![Random Agent Performance and Policy Map](part(a)/MountainCar-v0_random_100ep_mean5.png)\n",
+        "<center>\n",
+        "Figure-1: Random Agent Performance (left) and its Policy Map (right) for 100 episodes of random actions.\n",
+        "</center>\n",
+        "\n",
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Part(b)\n",
+        "The DQN agent successfully learned to solve the MountainCar-v0 environment. This is demonstrated by three key outcomes:\n",
+        "\n",
+        "- Training Loss: The loss initially rose and then steadily decreased, indicating successful convergence of the Q-network.\n",
+        "- Reward Improvement: The agent's average reward consistently increased throughout training, showing it learned to perform better.\n",
+        "- Effective Policy: The final policy map reveals the agent learned the essential momentum strategy, choosing actions that build momentum to reach the goal.\n",
+        "\n",
+        "--- \n",
+        "\n",
+        "![DQN Agent Performance and Policy Map](part(b)/MountainCar-v0_DQN_1000_episodes_64batch.png)\n",
+        "<center>\n",
+        "Figure-2: DQN Agent Performance (left) and its Policy Map (right) after training for 1000 episodes with a batch size of 64.\n",
+        "</center>\n",
+        "\n",
+        "---\n",
+        "\n",
+        "![Agent's Training Loss](part(b)/MountainCar-v0_DQN_1000_episodes_64batch_loss.png)\n",
+        "<center>\n",
+        "Figure-3: DQN Agent Training Loss over 1000 episodes with a batch size of 64.\n",
+        "</center>\n",
+        "\n",
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Part(c)\n",
+        "- Small batch sizes yield greater update randomness and learning curve variance, potentially helping escape local minima but also risking instability.\n",
+        "- Large batch sizes offer steadier convergence and cleaner policy maps, but is observed that that 'No action' option isn't learned as effectively with larger batches.\n",
+        "- For MountainCar-v0, all tested batch sizes enable successful DQN convergence.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "![](part(c)/MountainCar-v0_DQN_1000_episodes_16batch.png)\n",
+        "![](part(c)/MountainCar-v0_DQN_1000_episodes_32batch.png)\n",
+        "![](part(c)/MountainCar-v0_DQN_1000_episodes_64batch.png)\n",
+        "![](part(c)/MountainCar-v0_DQN_1000_episodes_128batch.png)\n",
+        "<center>\n",
+        "Figures 4,5,6,7: DQN Agent Performance for batch sizes of 16, 32, 64, and 128 over 1000 episodes.\n",
+        "</center>\n",
+        "\n",
+        "---"
+      ]
     }
   ],
   "metadata": {
